Increased margin in place list, added autofocus to search bar and fixed height issue on mobile map

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -119,7 +119,7 @@ h1,h2,h3,h4,h5,h6 {
 
     padding: 10px;
     background-size: 36px 36px;
-    background-image: url(assets/img/icons/search-black.png);
+    background-image: url(/assets/img/icons/search-black.png);
     background-position: 10px center;
     background-repeat: no-repeat;
     background-color: #fff;
@@ -161,8 +161,8 @@ h1,h2,h3,h4,h5,h6 {
         padding: 0.5rem 1rem;
     }
 
-    .sub-menu {
-        display: none !important;
+    .sub-menu, .map-menu {
+        display: none;
     }
 
     .search-group {
