--- a/client/assets/scss/homemap.scss
+++ b/client/assets/scss/homemap.scss
@@ -153,7 +153,7 @@ div.front-tiles2 {
 
 .panel-top.is-active {
     position: fixed !important;
-    margin-top: 81px;
+    margin-top: 49px;
 }
 
 .panel {
