--- a/client/assets/scss/place.scss
+++ b/client/assets/scss/place.scss
@@ -108,8 +108,8 @@ div.rn-carousel-indicator span {
 }
 
 .light_grey {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .grid-content {
